<resources>
    <string name="app_name">MentxuApp</string>
    <string name="registrarse">Erregistratu</string>
    <string name="ayuda">Laguntza</string>
    <string name="idioma">Hizkuntza</string>
    <string name="credenciales">Kredentzialak</string>
    <string name="ayudaTexto">Ongi etorri aplikazioaren aurkezpenera. Sakatu erregistratzeko botoia jolasten hasteko. Gozatu!</string>
    <string name="nombre">Izena:</string>
    <string name="apellido">Abizena:</string>
    <string name="dialog_comenzar">Hasi</string>
    <string name="dialog_cancelar">Atzera</string>
    <string name="desarrolladores">Garatzaileak:\n</string>
    <string name="clientes">Bezero: \n</string>
    <string name="error_campos_vacios">Mezedez, zure datuak bete.</string>
    <string name="dialog_hint_nombre">Izena</string>
    <string name="dialog_hint_apellido">Abizena</string>
    <string name="dialog_select_avatar">Aukeratu zure avatarra:</string>
    <string name="dialog_select_color">Aukeratu zure kolorea:</string>
    <string name="ok">OK</string>
    <string name="descripcion_mentxu_hablando" />
    <string name="deskribapena1">Goiko zatia, bertatik ibiltzeko erabiltzen dugu. </string>
    <string name="deskribapena2">Ontziaren ezker aldea.</string>
    <string name="deskribapena3">Ontziaren eskuin aldea.</string>
    <string name="deskribapena4">Ontziaren kanpoko zatia, ura ukitzen duena.</string>
    <string name="deskribapena5">Ontziaren aurreko aldea.</string>
    <string name="deskribapena6">Ontziaren atzeko aldea.</string>
    <string name="deskribapena7">Kapitaina bertan dago itsasontzia gidatzen.</string>
    <string name="textoExplicacion1">
        Kaixo lagunok!
        Mentxu naiz, Santurtziko kaio alaiena eta maitagarriena! Itsasoa dut etxe, eta Santurtzi izugarri maite dut: olatuen soinua, portuko haizea eta itsasargiaren distira!
        Urtero, uztailaren 8an udaletxean dagoen arrautza handi-handi batetik jaiotzen naiz, Santurtziko herritarrei jaiak hasi direla adierazte. Baina aurten, zerbait gertatu da…  nire arrautza galdu egin da! Herriko jaiak has daitezen, lagun diezadakezue arrautza bilatzen?
        Horretarako, bi erronka dibertigarri gainditu beharko  dituzue: lehenengoan, arrautza bilatu eta apurtzen lagundu beharko didazue, ni mundura berriro irten ahal izateko. Bigarrenean, berriz, hizki-sopa magiko batean nire izatea ondo deskribatzen duten hitzak aurkitu beharko dituzue.
        Prest al zaudete nirekin Santurtziko abentura honetan parte hartzeko? Elkarrekin arrautza aurkituko dugu, hitz sekretuak bilatuko ditugu, eta itsasoaren haizearekin batera hegan egingo dugu!
        Goazen, lagunok!
    </string>
    <string name="objeto1">Estalkia</string>
    <string name="objeto2">Ababor</string>
    <string name="objeto3">Istribor</string>
    <string name="objeto4">Kroskoa</string>
    <string name="objeto5">Proa</string>
    <string name="objeto6">Popa</string>
    <string name="objeto7">Nabigazioa zubia</string>
    <string name="textoExplicacion2">
        Zorionak, talde!
        Eskerrak eman nahi dizkizuet nire arrautza aurkitzea eta ura apurtzeagatik.
        Egindako esfortzua saritzaren, ibilbidean zehar laguntzaile gisa izango nauzue.
        Elkarrekin Santurtziko txoko politenak ezagutu ditugu, baina kontuz, aventura ez da oraindik amaitu.
        Hurrengo dinamika bikain egin baduzue ere, zangoak jarraitu behar du.
        Hurrengo geltokian eskultura bat aztertu beharko duzue, haren forman, kolorean eta xehetasun txiki-txikietan arreta guztia jarriz.
        Ume eta txakurraren eskultura honek herriaren iraganari eta itsasarekiko loturari omenaldia egiten dio.
        Garai batean, ura leku horretaraino heltzen zen, eta Santurtziko bizitza guztia arrantzaren eta portuaren inguruan antolatzen zen. Ondoren, benetako eskultura baten eta editatuta dagoen eskultura berberaren argazki biren arteko desberdintasunak bilatzea izango da hurrengo eginkizuna. Prest zaudete zuen ikusmen zorrotzena praktikan jartzeko?</string>
    <string name="titulo_diferencias">Bilatu desberdintasunak</string>
    <string name="instrucciones_diferencias">Bilatu Santurtziko portuko bi irudien arteko 7 desberdintasunak. Sakatu eskuineko irudian desberdintasunak markatzeko.</string>
    <string name="contador_diferencias_inicio">Aurkitutako desberdintasunak: 0/7</string>
    <string name="boton_pista">Laguntza</string>
    <string name="textoExplicacion3">
        Kaixo talde!
        Zorionak egindako lanagatik! Orain arte parte hartutako erronketan primeran moldatu zareten arren,  abenturak oraindik jarraitzen du! Prest?
        Oraingoan, Agurtza izeneko atunontzia bisitatuko dugu, itsasontzi-museoan dagoena. Hau ez da edozein ontzia, Santurtziko arrantza-tradizioaren altxor bat baizik!
        Agurtza itsasontzia Lekeitioko Murelaga ontzioletan eraikitako egurrezko atunontzia da. XX.mendearen hasiera arte arrantzarako erabili zen, bai Kantauriko kostaldean baita urruneko itsasoetan ere. Ontzia desegiteko zorian zegoela, Santurtzik eskuratu zuen, Bizkaian dagoen atunontzi bakarra izanik.
        Hura aztertzeko, Agurtza ontziaren argaki bat ikertu beharko duzue, bertan itsasontziaren atal bereizgarrienak agertuko dira eta: proa, popa, txalupa, lemazaina... eta beste hainbat! Benetako ontzi-aditu bihurtu zaitezten, atal bakoitzaren izena dagokion esanahiarekin lotu beharko dituzue.
        Prest al zaudete itsas abentura honetan murgiltzeko eta Agurtza ontzia hobeto ezagutzeko?
        Aurrera, marinel ausartak!
    </string>
    <string name="textoExplicacion4">
        Kaixo, marinel ausartak!
        Zelako lan dotorea orain arte egindakoa!
        Primeran ari zareten arren, oraingoan, dinamika berezi bati ekingo diogu, hauen ardatz nagusia ingurumenaren zaintza izanik. Prest zaudete?
        Dakizuen bezala, itsasoa nire etxea da, eta azkenaldian Santurtziko Itsas Portura heltzen ari den zabor kopurua gero eta handiagoa da.  Horregatik, zuen laguntza behar dut! Izan ere, hura zaintzen ez badugu, lurrean dagoen zaborra bertan pilatzen hasiko da, eta gune polit hau betirako galduko dugu.
        Are gehiago, Santurtziko Itsas Portua urte askotan arrantzale eta merkatarien leku garrantzitsua izan da. Lehen, sardina-saltzaile eta marinel asko aritzen ziren bertan lanean. Denboraren poderioz, merkantzia-ontziak eta bidaiariak jasotzen dituen portu handi bihurtu delarik.
        Hori dela eta, zuen lana portua bizirik eta garbi mantentzea izango da. Horretarako, zerutik eroriko diren zabor horiek guztiak eskuan daukadan saski erraldoiarekin harrapatu beharko dituzue, portura eta itsasora iritsi ez daitezen!
        Prest zaudete itsasoa garbi mantentzeko eta naturaren zaintzan parte-hartzeko? Goazen, lagunok! Mentxurekin batera, itsasoa babes dezagun!
    </string>
    <string name="textoExplicacion5">
        Kaixo, familia !
        Zelako lana egiten ari zaretena!
        Erronka bakoitza bikain gainditzen ari bazarete ere, abentura ez da oraindik amaitu! Baina lasai egon, ibilbidearen amaieratik gero eta gertuago zaudete… Eutsi gogor!
        Gure hurrengo geldialdira iritsiko gara, hots, Santurtziko Itsas-museoa. Museo hau herriaren arrantza-portuaren bihotzean dago, eta Santurtzik itsasoarekiko duen lotura berezia erakusten du.
        Alabaina arrantza-prozesua ezagutzen ahal duzue?
        Orain arte lortu duzuen guztiagatik lagungarri txiki bat esango dizuet: Lehenik, arrainak harrapatzen dituzte sare erraldoien bitartez. Ondoren, arrantzatutako guztia jaso eta haren sailkapena egiten dute, tamaina eta motaren arabera banatuz. Azkenik, arraina merkaturatzen dute, merkatura edo herriko kontsumorako eramanez.
        Orain, arrantzari buruz zertxobait gehiago dakizuela zuen erronka hurrengoa izango da: arrantza-prozesua osatzen duten urratsak kronologikoki ordenatzea. Horretarako, ordenatuta ez dauden zazpi irudi jasoko dituzue.
        Prest al zaudete itsasoko sekretuak aurkitzeko eta hurrengo erronka gainditzeko? Has gaitezen, arrantzale trebeak!
    </string>
    <string name="textoExplicacion6">
        Aupa, lagunok!
        Gure txango birtualaren amaierara iritsi gara! Baina elkarri agur esan aurretik, azken erronka bat geratzen zaizue. Ez triste egon! Elkarrekin Santurtziko txoko eta altxor asko ezagutu ditugu eta!
        Azken geldialdian, Eskultura museora joango gara. Han dagoen “Monumento a los niños y niñas de la guerra” izeneko eskultura hunkigarria ezagutzeko.  Horretarako, denboran atzera egin behar dugu, zehazki, 1937. urtera, non Espainiak Gerra Zibila izeneko guda jasaten ari zen. Garai hartan, Santurtzi herria suntsitzen zuten bonben ondorioz, haur askok beldurrez herritik ihes egitearen beharra ikusi zuten. Hori dela eta, itsasontzi batera igo eta leku seguruago baten bila ekin zioten. Bestalde, leku honek beste garrantzi kulturala du ere: elkarri agur esango diogun tokia.
        Oraingoan, zuen erronka hurrengo hau izango da:  batetik, eskultura arretaz aztertzea eta haren puzzlea osatzea. Bestetik, talde handian iritziak, pentsamenduak eta hipotesiak partekatzea. Amaitzeko, test-galdera labur bat erantzun beharko duzue.
        Prest al zaudete azken erronka hau gainditzeko eta abenturari amaiera zoragarria emateko?
        Has gaitezen, arrantzale trebeak!
    </string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic3J0b2Zyb3N0eSIsImEiOiJjbWw3eGlqdTAwMWpzM2VzYm9mb3BzZ214In0.IYzuxDpLTFzkRAe9yrbIDw</string>
    <string name="msg_juego_no_implementado">Geltoki honetako jokoa ez dago inplementatuta.</string>
    <string name="msg_parada_bloqueada">Aurreko geltokia osatu behar duzu lehenago.</string>
    <string name="msg_parada_completada">Geltoki hau osatu duzu jada!</string>
    <string name="msg_parada_no_disponible">Geltoki hau ez dago erabilgarri.</string>
    <string name="mapa_titulo">Santurtziko Interesguneak</string>
    <string name="congrats_titulo">Zorionak! 🎉</string>
    <string name="congrats_mensaje">Hurrengo geltoki guztiak osatu dituzu!\nOrain Modu Librean jolastu dezakezu nahi duzun guztietan.</string>
    <string name="ajustes">Ezarpenak</string>
    <string name="ajustes_volumen">Soinua</string>
    <string name="ajustes_volumen_musica">Musika eta efektuak</string>
    <string name="ajustes_idioma">Hizkuntza</string>
    <string name="ajustes_accesibilidad">Irisgarritasuna</string>
    <string name="accesibilidad_alto_contraste">Kontraste altua</string>
    <string name="accesibilidad_alto_contraste_desc">Testuaren irakurgarritasuna hobetzen du</string>
    <string name="ajustes_info">Informazioa</string>
    <string name="creditos_desarrolladores">Garatzaileak</string>
    <string name="ajustes_cerrar">Utzi</string>
    <string name="locked_title">🔒 Joko Librea Blokeatuta</string>
    <string name="locked_message">Joko librean jolastu ahal izateko, lehenik istorioa osatu behar duzu.\\n\\nJoan mapara eta geldiune guztiak bukatu!</string>
    <string name="go_to_map">🗺️ Mapara joan</string>
    <string name="free_mode_title">🎮 Joko Librea</string>
    <string name="free_mode_subtitle">Aukeratu minijoko bat berriro jolasteko!</string>
    <string name="mentxu_desc">Mentxu</string>
    <string name="game_sopa">Letra Zopa</string>
    <string name="game_diferencias">Diferentziak</string>
    <string name="game_relacionar">Erlazionatu</string>
    <string name="game_recogida">Bilketa</string>
    <string name="game_pesca">Prozesatzea</string>
    <string name="game_puzzle">Puzzlea eta Testa</string>
    <string name="hello_title">👋 Kaixo!</string>
    <string name="user_avatar_desc">Erabiltzailearen avatarra</string>
    <string name="achievements_title">🏆 Zure Lorpenak</string>
    <string name="stops_label">Geltokiak</string>
    <string name="points_label">Puntuak</string>
    <string name="continue_btn">Jarraitu</string>
    <string name="congrats_caps">ZORIONAK!</string>
    <string name="score_label">Lortutako puntuazioa:</string>
    <string name="view_ranking_btn">Ikus Ranking-a</string>
</resources>