<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@color/white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="315dp"
        android:layout_height="323dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_mentxuapp" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_marginBottom="40dp"
        android:padding="12dp" />

    <LinearLayout
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ayuda"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/ayuda"
            android:padding="8dp"
            android:src="@drawable/ayuda" />

        <ImageView
            android:id="@+id/idioma"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/idioma"
            android:padding="8dp"
            android:src="@drawable/idioma" />

        <ImageView
            android:id="@+id/credenciales"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/credenciales"
            android:padding="8dp"
            android:src="@drawable/info" />

    </LinearLayout>

</LinearLayout>
