<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Fondo"
    tools:context=".Parada3.Relacionar">

    <include layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#E8EAF6"
        android:padding="@dimen/padding_medium">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gVer1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gVer2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gVer3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gVer4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gHor1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gHor2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <!-- Columna de Objetos (Ahora a la Izquierda) -->
        <TextView
            android:id="@+id/objeto1"
            style="@style/Tile.Object"
            android:text="@string/objeto1"
            app:layout_constraintBottom_toTopOf="@id/objeto2"
            app:layout_constraintEnd_toStartOf="@+id/gVer2"
            app:layout_constraintStart_toStartOf="@+id/gVer1"
            app:layout_constraintTop_toTopOf="@+id/gHor1" />

        <TextView
            android:id="@+id/objeto2"
            style="@style/Tile.Object"
            android:text="@string/objeto2"
            app:layout_constraintBottom_toTopOf="@id/objeto3"
            app:layout_constraintEnd_toStartOf="@+id/gVer2"
            app:layout_constraintStart_toStartOf="@+id/gVer1"
            app:layout_constraintTop_toBottomOf="@id/objeto1" />

        <TextView
            android:id="@+id/objeto3"
            style="@style/Tile.Object"
            android:text="@string/objeto3"
            app:layout_constraintBottom_toTopOf="@id/objeto4"
            app:layout_constraintEnd_toStartOf="@+id/gVer2"
            app:layout_constraintStart_toStartOf="@+id/gVer1"
            app:layout_constraintTop_toBottomOf="@id/objeto2" />

        <TextView
            android:id="@+id/objeto4"
            style="@style/Tile.Object"
            android:text="@string/objeto4"
            app:layout_constraintBottom_toTopOf="@id/objeto5"
            app:layout_constraintEnd_toStartOf="@+id/gVer2"
            app:layout_constraintStart_toStartOf="@+id/gVer1"
            app:layout_constraintTop_toBottomOf="@id/objeto3" />

        <TextView
            android:id="@+id/objeto5"
            style="@style/Tile.Object"
            android:text="@string/objeto5"
            app:layout_constraintBottom_toTopOf="@id/objeto6"
            app:layout_constraintEnd_toStartOf="@+id/gVer2"
            app:layout_constraintStart_toStartOf="@+id/gVer1"
            app:layout_constraintTop_toBottomOf="@id/objeto4" />

        <TextView
            android:id="@+id/objeto6"
            style="@style/Tile.Object"
            android:text="@string/objeto6"
            app:layout_constraintBottom_toTopOf="@id/objeto7"
            app:layout_constraintEnd_toStartOf="@+id/gVer2"
            app:layout_constraintStart_toStartOf="@+id/gVer1"
            app:layout_constraintTop_toBottomOf="@id/objeto5" />

        <TextView
            android:id="@+id/objeto7"
            style="@style/Tile.Object"
            android:text="@string/objeto7"
            app:layout_constraintBottom_toTopOf="@id/gHor2"
            app:layout_constraintEnd_toStartOf="@+id/gVer2"
            app:layout_constraintStart_toStartOf="@+id/gVer1"
            app:layout_constraintTop_toBottomOf="@id/objeto6" />

        <!-- Columna de Descripciones (Ahora a la Derecha) -->
        <TextView
            android:id="@+id/Deskribapena1"
            style="@style/Tile.Description"
            android:text="@string/deskribapena1"
            app:layout_constraintBottom_toTopOf="@id/Deskribapena2"
            app:layout_constraintEnd_toStartOf="@+id/gVer4"
            app:layout_constraintStart_toStartOf="@+id/gVer3"
            app:layout_constraintTop_toTopOf="@+id/gHor1" />

        <TextView
            android:id="@+id/Deskribapena2"
            style="@style/Tile.Description"
            android:text="@string/deskribapena2"
            app:layout_constraintBottom_toTopOf="@id/Deskribapena3"
            app:layout_constraintEnd_toStartOf="@+id/gVer4"
            app:layout_constraintStart_toStartOf="@+id/gVer3"
            app:layout_constraintTop_toBottomOf="@+id/Deskribapena1" />

        <TextView
            android:id="@+id/Deskribapena3"
            style="@style/Tile.Description"
            android:text="@string/deskribapena3"
            app:layout_constraintBottom_toTopOf="@id/Deskribapena4"
            app:layout_constraintEnd_toStartOf="@+id/gVer4"
            app:layout_constraintStart_toStartOf="@+id/gVer3"
            app:layout_constraintTop_toBottomOf="@+id/Deskribapena2" />

        <TextView
            android:id="@+id/Deskribapena4"
            style="@style/Tile.Description"
            android:text="@string/deskribapena4"
            app:layout_constraintBottom_toTopOf="@+id/Deskribapena5"
            app:layout_constraintEnd_toStartOf="@+id/gVer4"
            app:layout_constraintStart_toStartOf="@+id/gVer3"
            app:layout_constraintTop_toBottomOf="@+id/Deskribapena3" />

        <TextView
            android:id="@+id/Deskribapena5"
            style="@style/Tile.Description"
            android:text="@string/deskribapena5"
            app:layout_constraintBottom_toTopOf="@+id/Deskribapena6"
            app:layout_constraintEnd_toStartOf="@+id/gVer4"
            app:layout_constraintStart_toStartOf="@+id/gVer3"
            app:layout_constraintTop_toBottomOf="@+id/Deskribapena4" />

        <TextView
            android:id="@+id/Deskribapena6"
            style="@style/Tile.Description"
            android:text="@string/deskribapena6"
            app:layout_constraintBottom_toTopOf="@+id/Deskribapena7"
            app:layout_constraintEnd_toStartOf="@+id/gVer4"
            app:layout_constraintStart_toStartOf="@+id/gVer3"
            app:layout_constraintTop_toBottomOf="@+id/Deskribapena5" />

        <TextView
            android:id="@+id/Deskribapena7"
            style="@style/Tile.Description"
            android:text="@string/deskribapena7"
            app:layout_constraintBottom_toTopOf="@+id/gHor2"
            app:layout_constraintEnd_toStartOf="@+id/gVer4"
            app:layout_constraintStart_toStartOf="@+id/gVer3"
            app:layout_constraintTop_toBottomOf="@+id/Deskribapena6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
