<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ajustes"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Volumen -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ajustes_volumen"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/volumeSeekBarDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/purple"
        android:thumbTint="@color/purple" />

    <!-- Idioma -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/ajustes_idioma"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbEuskara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple"
            android:text="Euskara"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbCastellano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/purple"
            android:text="Castellano"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCloseSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/purple"
        android:text="@string/ajustes_cerrar"
        android:textColor="@android:color/white" />

</LinearLayout>
